--- a/osx/Preference Pane/Installer/English.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/English.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Installer";
-CFBundleShortVersionString = "Installer version 4.2.2";
-CFBundleGetInfoString = "Installer version 4.2.2, Copyright 2003 by Slim Devices, Inc.";
+CFBundleName = "Slim Server Installer";
+CFBundleShortVersionString = "Slim Installer version 5.0";
+CFBundleGetInfoString = "Installer version 5.0, Copyright 2003 by Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright 2003 Slim Devices, Inc.";
