--- a/osx/Preference Pane/SLIMP3 Firmware Updater/English.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/English.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SLIMP3 Firmware Updater";
-CFBundleShortVersionString = "SLIMP3 Firmware Updater version 5.0";
-CFBundleGetInfoString = "SLIMP3 Firmware Updater version 5.0, Copyright 2003 by Slim Devices, Inc.";
+CFBundleShortVersionString = "5.0.1";
+CFBundleGetInfoString = "SLIMP3 Firmware Updater version 5.0.1, Copyright 2003 by Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright 2003 Slim Devices, Inc.";
