Added Frederick Miserey's French localization for the Mac installer and prefpane.
Also fixed up a couple of version numbers.


git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@610 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/English.lproj/Localizable.strings
@@ -1,1 +1,6 @@
+"Install" = "Install";
 "Update" = "Update";
+"Install Results" = "Install Results";
+"OK" = "OK";
+"SlimServer installed successfully.\n" = "SlimServer installed successfully.";
+"SlimServer install failed.\n" = "SlimServer install failed.";
