Committed SLIMP3 version 2.3 firmware with ethernet collision fix.
Fixed some more problems with the french mac localization.

Added some sanity checks to handle some insane WMA files.

Modified a patch from KDF that speeds up iTunes scanning substantially.

Fixed a problem where we were calculating the elapsed time incorrectly when synced.

Added the iTunes naming convention to the tag guessing from path names list.

Fixed a typo in the FAQ.


git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@614 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/French.lproj/Localizable.strings
@@ -1,10 +1,6 @@
-"Start Server" = "Démarrer";
-"Stop Server" = "Arrêter";
-"Start Server Description" = "Cliquez sur ce bouton pour démarrer SlimServer. Une fois
-démarré, les platines Slim pourront accéder à votre discothèque.";
-"Stop Server Description" = "Cliquez sur ce bouton pour arrêter SlimServer. Une fois arrêté,
-les platines Slim ne pourront pas accéder à votre discothèque.";
-"Authorization Launch Error" = "Impossible de mettre à jour le micrologiciel : fichier Update Firmware.sh manquant.";
-"Expired Authorization Error" = "Impossible de mettre à jour le micrologiciel : autorisation expirée.";
-"Firmware version" = "micrologiciel version %@.";
-"Firmware version invalid" = "version micrologiciel invalide.";
+"Install" = "Installer";
+"Update" = "Mettre à jour";
+"Install Results" = "Résultat de l'installation";
+"OK" = "OK";
+"SlimServer installed successfully.\n" = "SlimServer a été installé avec succès.";
+"SlimServer install failed.\n" = "L'installation de SlimServer a échoué.";
