--- a/osx/Preference Pane/Installer/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/German.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 "Install" = "Installieren";
 "Update" = "Aktualisieren";
-"Install Results" = "Resultat der Installation";
+"Install Results" = "Ergebnis der Installation";
 "OK" = "Ok";
-"SlimServer installed successfully.\n" = "SlimServer wurde korrekt installiert.";
+"SlimServer installed successfully.\n" = "SlimServer wurde erfolgreich installiert.";
 "SlimServer install failed.\n" = "Die Installation von SlimServer ist fehlgeschlagen.";
