Changed the version to 5.3.0b1
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@1133 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/German.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SlimServer";
-CFBundleShortVersionString = "5.3.0";
-CFBundleGetInfoString = "SlimServer version 5.3.0, Copyright 2002-2004 Slim Devices, Inc.";
+CFBundleShortVersionString = "5.3.0b1";
+CFBundleGetInfoString = "SlimServer version 5.3.0b1, Copyright 2002-2004 Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright © 2002-2004 Slim Devices, Inc., all rights reserved.";
 NSPrefPaneIconLabel = "SlimServer";
