--- a/osx/Preference Pane/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/German.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SlimServer";
-CFBundleShortVersionString = "6.0.0";
-CFBundleGetInfoString = "SlimServer version 6.0.0, Copyright 2002-2004 Slim Devices, Inc.";
-NSHumanReadableCopyright = "Copyright © 2002-2004 Slim Devices, Inc., all rights reserved.";
+CFBundleShortVersionString = "6.0a1";
+CFBundleGetInfoString = "SlimServer version 6.0a1, Copyright 2002-2005 Slim Devices, Inc.";
+NSHumanReadableCopyright = "Copyright © 2002-2005 Slim Devices, Inc., all rights reserved.";
 NSPrefPaneIconLabel = "SlimServer";
