--- a/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "Installation SlimServer";
-CFBundleShortVersionString = "6.0.0";
-CFBundleGetInfoString = "Installation SlimServer version 6.0.0, Copyright 2003-2004 Slim Devices, Inc.";
-NSHumanReadableCopyright = "Copyright © 2003-2004 Slim Devices, Inc., tous droits réservés.";
+CFBundleShortVersionString = "6.0a1";
+CFBundleGetInfoString = "Installation SlimServer version 6.0a1, Copyright 2003-2005 Slim Devices, Inc.";
+NSHumanReadableCopyright = "Copyright © 2003-2005 Slim Devices, Inc., tous droits réservés.";
