--- a/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SlimServer Installer";
-CFBundleShortVersionString = "6.0.0";
-CFBundleGetInfoString = "SlimServer Installer version 6.0.0, Copyright 2003-2004 Slim Devices, Inc.";
-NSHumanReadableCopyright = "Copyright © 2003-2004 Slim Devices, Inc., all rights reserved.";
+CFBundleShortVersionString = "6.0a1";
+CFBundleGetInfoString = "SlimServer Installer version 6.0a1, Copyright 2003-2005 Slim Devices, Inc.";
+NSHumanReadableCopyright = "Copyright © 2003-2005 Slim Devices, Inc., all rights reserved.";
