Update server version to 6.0.0
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@2735 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/English.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/English.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
 CFBundleName = "SlimServer";
-CFBundleShortVersionString = "6.0b3";
-CFBundleGetInfoString = "SlimServer version 6.0b3, Copyright 2002-2005 Slim Devices, Inc.";
+CFBundleShortVersionString = "6.0.0";
+CFBundleGetInfoString = "SlimServer version 6.0.0, Copyright 2002-2005 Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright © 2002-2005 Slim Devices, Inc., all rights reserved.";
 NSPrefPaneIconLabel = "SlimServer";
