--- a/osx/Preference Pane/SLIMP3 Firmware Updater/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/German.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SLIMP3 Firmware Updater";
-CFBundleShortVersionString = "6.1.0";
-CFBundleGetInfoString = "SLIMP3 Firmware Updater version 6.1.0, Copyright 2005 by Slim Devices, Inc.";
+CFBundleShortVersionString = "6.2b1";
+CFBundleGetInfoString = "SLIMP3 Firmware Updater version 6.2b1, Copyright 2005 by Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright 2005 Slim Devices, Inc.";
