bug 2639 -  - Give a useful warning message when trying to run the installer on Mac OS X below 10.3
Bug: 2639
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@7926 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/English.lproj/Localizable.strings
@@ -4,3 +4,5 @@
 "OK" = "OK";
 "SlimServer installed successfully.\n" = "SlimServer installed successfully.";
 "SlimServer install failed.\n" = "SlimServer install failed.";
+"You must have OS X 10.3 or later to run SlimServer.\n" = "You must have OS X 10.3 or later to run SlimServer.";
+"Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
