--- a/osx/Preference Pane/English.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/English.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
 CFBundleName = "SlimServer";
-CFBundleShortVersionString = "6.5b1";
-CFBundleGetInfoString = "SlimServer version 6.5b1, Copyright 2002-2005 Slim Devices, Inc.";
+CFBundleShortVersionString = "7.0a1";
+CFBundleGetInfoString = "SlimServer version 7.0a1, Copyright 2002-2005 Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright © 2002-2005 Slim Devices, Inc., all rights reserved.";
 NSPrefPaneIconLabel = "SlimServer";
