--- a/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "Installation SlimServer";
-CFBundleShortVersionString = "6.5b1";
-CFBundleGetInfoString = "Installation SlimServer version 6.5b1, Copyright 2003-2005 Slim Devices, Inc.";
+CFBundleShortVersionString = "7.0a1";
+CFBundleGetInfoString = "Installation SlimServer version 7.0a1, Copyright 2003-2005 Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright © 2003-2005 Slim Devices, Inc., tous droits réservés.";
