--- a/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SlimServer Installer";
-CFBundleShortVersionString = "6.5b1";
-CFBundleGetInfoString = "SlimServer Installer version 6.5b1, Copyright 2003-2005 Slim Devices, Inc.";
+CFBundleShortVersionString = "7.0a1";
+CFBundleGetInfoString = "SlimServer Installer version 7.0a1, Copyright 2003-2005 Slim Devices, Inc.";
 NSHumanReadableCopyright = "Copyright © 2003-2005 Slim Devices, Inc., all rights reserved.";
