Update changelog for Debian package.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@9194 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+slimserver (7.0a1) unstable; urgency=low
+
+  * Update package for trunk
+
+ -- Dan Sully <debian@slimdevices.com>  Mon, 28 Aug 2006 10:14:33 -0000
+
 slimserver (6.5b1) unstable; urgency=low
 
   * Initial Debian Packaging.
