Update branding and copyright information to Logitech
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@11682 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,6 @@
 $Id$
 
-This is SlimServer for Debian, packaged by Slim Devices, Inc.
+This is SlimServer for Debian.
 
 It includes all fonts, HTML & Firmware, unlike the "Official Debian Package".
 
