--- a/osx/Preference Pane/English.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/English.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "SlimServer";
 CFBundleShortVersionString = "7.0a1";
-CFBundleGetInfoString = "SlimServer version 7.0a1, Copyright 2002-2005 Slim Devices, Inc.";
-NSHumanReadableCopyright = "Copyright © 2002-2005 Slim Devices, Inc., all rights reserved.";
+CFBundleGetInfoString = "SlimServer version 7.0a1, Copyright 2002-2005 Logitech";
+NSHumanReadableCopyright = "Copyright © 2002-2005 Logitech, all rights reserved.";
 NSPrefPaneIconLabel = "SlimServer";
