Squeeze* them all - goodbye SlimServer, welcome SqueezeCenter! - strings - documentation, readme etc. - comments
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13299 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/README
+++ b/debian/README
@@ -1,6 +1,6 @@
 $Id$
 
-This is SlimServer for Debian.
+This is SqueezeCenter for Debian.
 
 It includes all fonts, HTML & Firmware, unlike the "Official Debian Package".
 
