--- a/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "SlimServer";
+CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "SlimServer versie 7.0a, Copyright 2002-2007 Logitech";
+CFBundleGetInfoString = "SqueezeCenter versie 7.0a, Copyright 2002-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2007 Logitech, alle rechten voorbehouden.";
-NSPrefPaneIconLabel = "SlimServer";
+NSPrefPaneIconLabel = "SqueezeCenter";
