--- a/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Update";
 "Install Results" = "Installatieresultaten";
 "OK" = "OK";
-"SlimServer installed successfully.\n" = "SlimServer is ge•nstalleerd.";
-"SlimServer install failed.\n" = "SlimServer-installatie mislukt.";
-"You must have OS X 10.3 or later to run SlimServer.\n" = "Je moet OS X 10.3 of hoger hebben om SlimServer uit te voeren.";
+"SqueezeCenter installed successfully.\n" = "SqueezeCenter is geï¿½nstalleerd.";
+"SqueezeCenter install failed.\n" = "SqueezeCenter-installatie mislukt.";
+"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Je moet OS X 10.3 of hoger hebben om SqueezeCenter uit te voeren.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 vereist";
