--- a/osx/Preference Pane/Installer/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/English.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Update";
 "Install Results" = "Install Results";
 "OK" = "OK";
-"SlimServer installed successfully.\n" = "SlimServer installed successfully.";
-"SlimServer install failed.\n" = "SlimServer install failed.";
-"You must have OS X 10.3 or later to run SlimServer.\n" = "You must have OS X 10.3 or later to run SlimServer.";
+"SqueezeCenter installed successfully.\n" = "SqueezeCenter installed successfully.";
+"SqueezeCenter install failed.\n" = "SqueezeCenter install failed.";
+"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "You must have OS X 10.3 or later to run SqueezeCenter.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
