--- a/osx/Preference Pane/Installer/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/German.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Update" = "Aktualisieren";
 "Install Results" = "Ergebnis der Installation";
 "OK" = "OK";
-"SlimServer installed successfully.\n" = "SlimServer wurde installiert.";
-"SlimServer install failed.\n" = "Fehler bei Installation von SlimServer.";
-"You must have OS X 10.3 or later to run SlimServer.\n" = "Es ist OS X 10.3 oder hšher erforderlich, um SlimServer auszufŸhren.";
+"SqueezeCenter installed successfully.\n" = "SqueezeCenter wurde installiert.";
+"SqueezeCenter install failed.\n" = "Fehler bei Installation von SqueezeCenter.";
+"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "Es ist OS X 10.3 oder hï¿½her erforderlich, um SqueezeCenter auszufï¿½hren.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 erforderlich";
