--- a/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Instalador de SlimServer";
+CFBundleName = "Instalador de SqueezeCenter";
 CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "Instalador de SlimServer versión 7.0a, Copyright 2003-2007 Logitech";
+CFBundleGetInfoString = "Instalador de SqueezeCenter versión 7.0a, Copyright 2003-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2007 Logitech, reservados todos los derechos.";
 
