--- a/osx/Preference Pane/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/English.lproj/Localizable.strings
@@ -1,8 +1,8 @@
 "Start Server" = "Start Server";
 "Stop Server" = "Stop Server";
-"Start Server Description" = "Click this button to start the SlimServer. Once started,
+"Start Server Description" = "Click this button to start the SqueezeCenter. Once started,
 Slim players will be able to access your music library.";
-"Stop Server Description" = "Click this button to stop the SlimServer. Once stopped,
+"Stop Server Description" = "Click this button to stop the SqueezeCenter. Once stopped,
 Slim players will not be able to access your music library.";
 "Authorization Launch Error" = "Unable to update firmware: missing file Update Firmware.sh.";
 "Expired Authorization Error" = "Unable to update firmware: authorization expired.";
