--- a/osx/Preference Pane/Italian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Italian.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "SlimServer";
+CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "SlimServer versione 7.0a. Copyright 2002-2007 Logitech";
+CFBundleGetInfoString = "SqueezeCenter versione 7.0a. Copyright 2002-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2007 Logitech. Tutti i diritti riservati.";
-NSPrefPaneIconLabel = "SlimServer";
+NSPrefPaneIconLabel = "SqueezeCenter";
