Complete (afaik) migration of Mac UI with two exceptions:
1.  Still assumes that slimserver.pl is the main executable. Fix this in start-server.sh
2.  DMG name is still SlimServer.  Fix this in the makerelease.pl

This included renaming a bunch of scripts, etc, which were badly named for years.



git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13407 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -1,7 +1,7 @@
 "Start Server" = "Server starten";
 "Stop Server" = "Server anhalten";
-"Start Server Description" = "Klicken Sie auf diese Schaltfläche, um SqueezeCenter zu starten. Nach dem Start können Slim-Player auf Ihre Musiksammlung zugreifen.";
-"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um SqueezeCenter anzuhalten. Wenn der Server angehalten wurde, können Slim-Player nicht mehr auf Ihre Musiksammlung zugreifen.";
+"Start Server Description" = "Klicken Sie auf diese Schaltfläche, um SqueezeCenter zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
+"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um SqueezeCenter anzuhalten. Wenn der Server angehalten wurde, können Player nicht mehr auf Ihre Musiksammlung zugreifen.";
 "Authorization Launch Error" = "Firmware konnte nicht aktualisiert werden: Datei Update Firmware.sh fehlt.";
 "Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung ist abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
