More inconsistent copyright notices.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13908 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
@@ -3,5 +3,5 @@
 CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.0a";
 CFBundleGetInfoString = "SqueezeCenter versie 7.0a, Copyright 2002-2007 Logitech";
-NSHumanReadableCopyright = "Copyright 2002-2007 Logitech, alle rechten voorbehouden.";
+NSHumanReadableCopyright = "Copyright 2002-2007 Logitech";
 NSPrefPaneIconLabel = "SqueezeCenter";
