--- a/osx/Preference Pane/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/German.lproj/InfoPlist.strings
@@ -3,6 +3,6 @@
 CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.0a";
 CFBundleGetInfoString = "SqueezeCenter Version 7.0a, Copyright 2002-2007 Logitech";
-NSHumanReadableCopyright = "Copyright 2002-2007 Logitech. Alle Rechte vorbehalten.";
+NSHumanReadableCopyright = "Copyright 2002-2007 Logitech";
 NSPrefPaneIconLabel = "SqueezeCenter";
 
