--- a/osx/Preference Pane/Installer/English.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/English.lproj/InfoPlist.strings
@@ -3,4 +3,4 @@
 CFBundleName = "SqueezeCenter Installer";
 CFBundleShortVersionString = "7.0a";
 CFBundleGetInfoString = "SqueezeCenter Installer version 7.0a, Copyright 2003-2007 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2007 Logitech, all rights reserved.";
+NSHumanReadableCopyright = "Copyright 2003-2007 Logitech";
