--- a/osx/Preference Pane/Italian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Italian.lproj/InfoPlist.strings
@@ -3,5 +3,5 @@
 CFBundleName = "SqueezeCenter";
 CFBundleShortVersionString = "7.0a";
 CFBundleGetInfoString = "SqueezeCenter versione 7.0a. Copyright 2002-2007 Logitech";
-NSHumanReadableCopyright = "Copyright 2002-2007 Logitech. Tutti i diritti riservati.";
+NSHumanReadableCopyright = "Copyright 2002-2007 Logitech";
 NSPrefPaneIconLabel = "SqueezeCenter";
