--- a/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Dutch.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SqueezeCenter";
-CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "SqueezeCenter versie 7.0a, Copyright 2002-2007 Logitech";
+CFBundleShortVersionString = "7.0";
+CFBundleGetInfoString = "SqueezeCenter versie 7.0, Copyright 2002-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2007 Logitech";
 NSPrefPaneIconLabel = "SqueezeCenter";
