--- a/osx/Preference Pane/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/German.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SqueezeCenter";
-CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "SqueezeCenter Version 7.0a, Copyright 2002-2007 Logitech";
+CFBundleShortVersionString = "7.0";
+CFBundleGetInfoString = "SqueezeCenter Version 7.0, Copyright 2002-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2007 Logitech";
 NSPrefPaneIconLabel = "SqueezeCenter";
 
