--- a/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "Programme d'installation du SqueezeCenter";
-CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "Programme d'installation du SqueezeCenter version 7.0a, Copyright 2003-2007 Logitech";
+CFBundleShortVersionString = "7.0";
+CFBundleGetInfoString = "Programme d'installation du SqueezeCenter version 7.0, Copyright 2003-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2007 Logitech";
