--- a/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/German.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SqueezeCenter Installer";
-CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "SqueezeCenter Installer Version 7.0a, Copyright 2003-2007 Logitech";
+CFBundleShortVersionString = "7.0";
+CFBundleGetInfoString = "SqueezeCenter Installer Version 7.0, Copyright 2003-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2007 Logitech";
