--- a/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "Instalador de SqueezeCenter";
-CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "Instalador de SqueezeCenter versión 7.0a, Copyright 2003-2007 Logitech";
+CFBundleShortVersionString = "7.0";
+CFBundleGetInfoString = "Instalador de SqueezeCenter versión 7.0, Copyright 2003-2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2007 Logitech";
 
