--- a/osx/Preference Pane/SLIMP3 Firmware Updater/Dutch.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/Dutch.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SLIMP3 Firmware Updater";
-CFBundleShortVersionString = "7.0a";
-CFBundleGetInfoString = "SLIMP3 Firmware Updater version 7.0a, Copyright 2007 Logitech";
+CFBundleShortVersionString = "7.0";
+CFBundleGetInfoString = "SLIMP3 Firmware Updater version 7.0, Copyright 2007 Logitech";
 NSHumanReadableCopyright = "Copyright 2007 Logitech";
