--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-slimserver (7.0) unstable; urgency=low
+squeezecenter (7.0) unstable; urgency=low
 
-  * Update package for trunk
+  * Updated package to new name
 
- -- Dan Sully <debian@slimdevices.com>  Mon, 28 Aug 2006 10:14:33 -0000
+ -- Matt Wise <debian@slimdevices.com>  Mon, 28 Aug 2006 10:14:33 -0000
 
 slimserver (6.5b1) unstable; urgency=low
 
