Added code in to include the release number in the ReadyNas package
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@17294 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/changelog
+++ b/readynas/changelog
@@ -1,4 +1,4 @@
-squeezecenter (7.0) unstable; urgency=low
+squeezecenter (_VERSION_) unstable; urgency=low
 
   * Set up initial package for ReadyNas nightly builds... 
 
