translation updates for the mac installer
git-svn-id: file:///home/awy/mirror/slim/7.2/trunk/platforms@22271 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "SqueezeCenter Installer";
+CFBundleName = "SqueezeCenterin asennusohjelma";
 CFBundleShortVersionString = "7.2";
-CFBundleGetInfoString = "SqueezeCenter Installer version 7.2, Copyright 2003-2008 Logitech";
+CFBundleGetInfoString = "SqueezeCenterin asennusohjelma, versio 7.2, Copyright 2003-2008 Logitech";
 NSHumanReadableCopyright = "Copyright 2003-2008 Logitech";
