--- a/osx/Preference Pane/Installer/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/Localizable.strings
@@ -1,8 +1,8 @@
-"Install" = "Install";
-"Update" = "Update";
-"Install Results" = "Install Results";
+"Install" = "Asenna";
+"Update" = "Päivitä";
+"Install Results" = "Asennustulokset";
 "OK" = "OK";
-"SqueezeCenter installed successfully.\n" = "SqueezeCenter installed successfully.";
-"SqueezeCenter install failed.\n" = "SqueezeCenter install failed.";
-"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "You must have OS X 10.3 or later to run SqueezeCenter.";
-"Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
+"SqueezeCenter installed successfully.\n" = "SqueezeCenterin asennus onnistui.";
+"SqueezeCenter install failed.\n" = "SqueezeCenterin asennus epäonnistui.";
+"You must have OS X 10.3 or later to run SqueezeCenter.\n" = "SqueezeCenterin käyttämiseen tarvitaan OS X -käyttöjärjestelmän versio 10.3 tai uudempi.";
+"Mac OS X 10.3 Required" = "Vaaditaan Mac OS X 10.3";
