--- a/osx/Preference Pane/Installer/Swedish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Swedish.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Installationsprogram för SqueezeCenter";
-CFBundleShortVersionString = "7.2";
-CFBundleGetInfoString = "Installationsprogram för SqueezeCenter version 7.2, © 2003–2008 Logitech";
-NSHumanReadableCopyright = "© 2003–2008 Logitech";
+CFBundleName = "Installationsprogram fï¿½r SqueezeCenter";
+CFBundleShortVersionString = "7.3";
+CFBundleGetInfoString = "Installationsprogram fï¿½r SqueezeCenter version 7.3, ï¿½ 2003ï¿½2008 Logitech";
+NSHumanReadableCopyright = "ï¿½ 2003ï¿½2008 Logitech";
