--- a/osx/Preference Pane/Installer/Norwegian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Norwegian.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "Installasjonsprogram for SqueezeCenter";
-CFBundleShortVersionString = "7.2";
-CFBundleGetInfoString = "Installasjonsprogram for SqueezeCenter versjon 7.2, opphavsrett 2003–2008 Logitech";
-NSHumanReadableCopyright = "Opphavsrett 2003–2008 Logitech";
+CFBundleShortVersionString = "7.3";
+CFBundleGetInfoString = "Installasjonsprogram for SqueezeCenter versjon 7.3, opphavsrett 2003ï¿½2008 Logitech";
+NSHumanReadableCopyright = "Opphavsrett 2003ï¿½2008 Logitech";
