--- a/osx/Preference Pane/SLIMP3 Firmware Updater/Spanish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/Spanish.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "SLIMP3 Firmware Updater";
-CFBundleShortVersionString = "7.2";
-CFBundleGetInfoString = "SLIMP3 Firmware Updater versión 7.2, Copyright 2008 Logitech";
+CFBundleShortVersionString = "7.3";
+CFBundleGetInfoString = "SLIMP3 Firmware Updater versiï¿½n 7.3, Copyright 2008 Logitech";
 NSHumanReadableCopyright = "Copyright 2008 Logitech";
