--- a/osx/Preference Pane/SLIMP3 Firmware Updater/Swedish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/Swedish.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
-CFBundleName = "Uppdateringsprogram för SLIMP3:s inbyggda programvara";
-CFBundleShortVersionString = "7.2";
-CFBundleGetInfoString = "Uppdateringsprogram för SLIMP3:s inbyggda programvara version 7.2, © 2008 Logitech";
-NSHumanReadableCopyright = "© 2008 Logitech";
+CFBundleName = "Uppdateringsprogram fï¿½r SLIMP3:s inbyggda programvara";
+CFBundleShortVersionString = "7.2.1";
+CFBundleGetInfoString = "Uppdateringsprogram fï¿½r SLIMP3:s inbyggda programvara version 7.2.1, ï¿½ 2008 Logitech";
+NSHumanReadableCopyright = "ï¿½ 2008 Logitech";
