--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -6,3 +6,4 @@
 "Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung ist abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
 "Firmware version invalid" = "Ungültige Firmware-Version.";
+"CONTROLPANEL_INSTALL_UPDATE" = "Update installieren";
