update checking in PrefPane working - offer installation if installer has been downloaded in background - offer check for update if not - offer download if check is positive - localization
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26032 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Dutch.lproj/Localizable.strings
@@ -6,3 +6,8 @@
 "Expired Authorization Error" = "Kan firmware niet updaten: autorisatie verlopen.";
 "Firmware version" = "Firmwareversie %@.";
 "Firmware version invalid" = "Firmwareversie ongeldig.";
+"CONTROLPANEL_UPDATE_AVAILABLE" = "An updated SqueezeCenter version is available and ready to be installed.";
+"CONTROLPANEL_NO_UPDATE_AVAILABLE" = "There's no updated SqueezeCenter version available.";
+"CONTROLPANEL_CHECK_UPDATE" = "Check for update";
+"CONTROLPANEL_DOWNLOAD_UPDATE" = "Download update";
+"CONTROLPANEL_INSTALL_UPDATE" = "Install update";
