--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -6,4 +6,8 @@
 "Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung ist abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
 "Firmware version invalid" = "Ungültige Firmware-Version.";
-"CONTROLPANEL_INSTALL_UPDATE" = "Update installieren";
+"CONTROLPANEL_UPDATE_AVAILABLE" = "An updated SqueezeCenter version is available and ready to be installed.";
+"CONTROLPANEL_NO_UPDATE_AVAILABLE" = "There's no updated SqueezeCenter version available.";
+"CONTROLPANEL_CHECK_UPDATE" = "Check for update";
+"CONTROLPANEL_DOWNLOAD_UPDATE" = "Download update";
+"CONTROLPANEL_INSTALL_UPDATE" = "Install update";
