--- a/osx/Preference Pane/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/French.lproj/Localizable.strings
@@ -6,3 +6,8 @@
 "Expired Authorization Error" = "Impossible de mettre à jour le micrologiciel: l'autorisation a expiré.";
 "Firmware version" = "Version %@ du micrologiciel.";
 "Firmware version invalid" = "Version du micrologiciel non valide.";
+"CONTROLPANEL_UPDATE_AVAILABLE" = "An updated SqueezeCenter version is available and ready to be installed.";
+"CONTROLPANEL_NO_UPDATE_AVAILABLE" = "There's no updated SqueezeCenter version available.";
+"CONTROLPANEL_CHECK_UPDATE" = "Check for update";
+"CONTROLPANEL_DOWNLOAD_UPDATE" = "Download update";
+"CONTROLPANEL_INSTALL_UPDATE" = "Install update";
