--- a/osx/Preference Pane/Hebrew.lproj/Localizable.strings
+++ b/osx/Preference Pane/Hebrew.lproj/Localizable.strings
@@ -6,3 +6,8 @@
 "Expired Authorization Error" = "לא ניתן לעדכן את הקושחה: פג תוקף ההרשאה.";
 "Firmware version" = "גרסת קושחה %@.";
 "Firmware version invalid" = "גרסת הקושחה לא חוקית.";
+"CONTROLPANEL_UPDATE_AVAILABLE" = "An updated SqueezeCenter version is available and ready to be installed.";
+"CONTROLPANEL_NO_UPDATE_AVAILABLE" = "There's no updated SqueezeCenter version available.";
+"CONTROLPANEL_CHECK_UPDATE" = "Check for update";
+"CONTROLPANEL_DOWNLOAD_UPDATE" = "Download update";
+"CONTROLPANEL_INSTALL_UPDATE" = "Install update";
