reduce number of cleanup options, optionally shut down SC before the cleanup
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26109 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -11,3 +11,6 @@
 "CONTROLPANEL_CHECK_UPDATE" = "Check for update";
 "CONTROLPANEL_DOWNLOAD_UPDATE" = "Download update";
 "CONTROLPANEL_INSTALL_UPDATE" = "Install update";
+"CONTROLPANEL_WANT_TO_STOP_SC" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"CONTROLPANEL_CLEANUP_DO" = "Run Cleanup";
+"CANCEL" = "Cancel";
