when the prefpane is started and an update is downloaded and ready to be installed, show popup asking for the update to be installed
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26154 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "CONTROLPANEL_WANT_TO_STOP_SC" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
 "CONTROLPANEL_CLEANUP_DO" = "Run Cleanup";
 "CANCEL" = "Cancel";
+"NOT_NOW" = "Not now";
