flip Rescan/Abort button when scanning, allowing to abort a scan process
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26389 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -15,3 +15,5 @@
 "CONTROLPANEL_CLEANUP_DO" = "Run Cleanup";
 "CANCEL" = "Cancel";
 "NOT_NOW" = "Not now";
+"ABORT" = "Abort";
+"RESCAN" = "Rescan";
