use EN string as placeholder
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26408 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Finnish.lproj/Localizable.strings
@@ -6,14 +6,14 @@
 "Expired Authorization Error" = "Laiteohjelmistoa ei voida päivittää: valtuutus vanhentunut.";
 "Firmware version" = "Laiteohjelmistoversio %@.";
 "Firmware version invalid" = "Väärä laiteohjelmistoversio.";
-"CONTROLPANEL_UPDATE_AVAILABLE" = "An updated SqueezeCenter version is available and ready to be installed.";
-"CONTROLPANEL_NO_UPDATE_AVAILABLE" = "There's no updated SqueezeCenter version available.";
-"CONTROLPANEL_CHECK_UPDATE" = "Check for update";
-"CONTROLPANEL_DOWNLOAD_UPDATE" = "Download update";
-"CONTROLPANEL_INSTALL_UPDATE" = "Install update";
-"CONTROLPANEL_WANT_TO_STOP_SC" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
-"CONTROLPANEL_CLEANUP_DO" = "Run Cleanup";
-"CANCEL" = "Cancel";
-"NOT_NOW" = "Not now";
-"ABORT" = "Abort";
-"RESCAN" = "Rescan";
+"An updated SqueezeCenter version is available and ready to be installed." = "An updated SqueezeCenter version is available and ready to be installed.";
+"There's no updated SqueezeCenter version available." = "There's no updated SqueezeCenter version available.";
+"Check for update" = "Check for update";
+"Download update" = "Download update";
+"Install update" = "Install update";
+"SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?" = "SqueezeCenter has to be stopped before running the cleanup. Do you want to stop it now?";
+"Run Cleanup" = "Run Cleanup";
+"Cancel" = "Cancel";
+"Not now" = "Not now";
+"Abort" = "Abort";
+"Rescan" = "Rescan";
