SqueezeNetwork panel for PrefPane functional
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@26453 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/English.lproj/Localizable.strings
@@ -17,3 +17,5 @@
 "Not now" = "Not now";
 "Abort" = "Abort";
 "Rescan" = "Rescan";
+
+"Invalid SqueezeNetwork username or password." = "Invalid SqueezeNetwork username or password.";
